@@ -177,6 +177,7 @@ Version 1.5
  - Add Aeotec ZW129 WallMote Duo (Nechry)
  - Add Aeotec ZW132, ZW139 and ZW140 Nano Switch (Nechry)
  - Add MCOHome Thermostat fan coil MH8-FC-EU (Nechry)
+ - Add Fibaro FGDW002 Door Opening Sensor 2 (Nechry)
  
 Version 1.4
  - Released 10th Jan, 2016
